[tool.poetry]
name = "data-visualization"
version = "0.1.0"
description = ""
authors = ["ferasezzaldeen <ferasezaldeen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlip = "^0.2"
jupyterlab = "^3.1.4"
seaborn = "^0.11.1"
pandas = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
